[package]
name = "mdns-docker-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
dotenvy = "0.15.7"
local-ip-address = "0.6.5"
mdns-sd = "0.17.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
