[package]
name = "docker-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
dotenvy = "0.15.7"
local-ip-address = "0.6.10"
mdns-sd = "0.18.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
btleplug = "0.11.8"
uuid = { version = "1.21.0", features = ["serde"] }
